terraform-gke/app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: demo-ingress
  namespace: default
spec:
  backend:
    serviceName: apache
    servicePort: 80
